[package]
name = "rusty-heatpump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.5.0", features = ["serde"] }
rumqttc = "0.23.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.32"
slotmap = "1.0.7"
sqlx = { version = "0.7.3", features = ["sqlite"] }
time = "0.3.30"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
